--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,16 @@
-tace_detection/octo/*
-tace_detection/pics/*
 .DS_Store
 .idea
 __pycache__
+
+tace_detection/octo/*
+tace_detection/pics/*
 tace_detection/utils/secret_octopod.py
-IP_DSF
+
 proba_calibrator/gif
+
 reinforcement
+
+feature_from_music/data
+feature_from_music/musemind_copycat/AIVE x Musemind
+feature_from_music/musemind_copycat/data
+feature_from_music/pretrained_models
