--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,5 @@ reinforcement
 feature_from_music/data
 feature_from_music/musemind_copycat/AIVE x Musemind
 feature_from_music/musemind_copycat/data
+feature_from_music/musemind_copycat/musemind_benchmark
 feature_from_music/pretrained_models
